# SubAgentForge

./: .gitignore  ARCHITECTURE.md  BUILD_AUDIT.md  BUILD_COVERAGE_PLAN.md  BUILD_LOG.md  BUILD_REPORT.md  CHEAT_SHEET.txt  EXAMPLES.md  QUICK_START.txt  README.md  pyproject.toml  requirements.txt  setup.py  subagentforge.py
branding/: BRANDING_PROMPTS.md
tests/: test_subagentforge.py
