[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SubAgentForge"
version = "1.0.0"
description = "Expert Subagent Deployment & Lifecycle Manager for Team Brain"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[project.scripts]
forge = "subagentforge:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["subagentforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=subagentforge", "--cov-report=term-missing", "--cov-fail-under=90"]
